<resources>
    <string name="app_name">Trains!!!</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="et_train_id">Train ID</string>
    <string name="tv_on_time_instructions">Enter the train ID and Is On Time to check is your train on time.</string>
    <string name="btn_on_time_search">Is On Time?</string>
    <string name="btn_station_search">Search</string>
    <string name="et_stationcode_hint">Station</string>
    <string name="title_activity_station_arrivals_departures">Arrivals and Departures</string>
    <string name="no_results">No results found.</string>
    <string name="search">Search</string>
    <string name="search_instructions">Enter the departure and arrival station short codes, and the date. Then press search.</string>
    <string name="arrival_station_shortcode">Arrival Station</string>
    <string name="departure_station_shortcode">Departure Station</string>
    <string name="check_fields">Error searching.</string>
    <string name="action_station_short_codes">Station short codes</string>
    <string name="filter">Filter...</string>
    <string name="get_short_code_from_list">Get short code from list</string>
    <string name="check_if_the_train_was_on_time_in_a_specific_date">OR check if the train was on time in a specific date.</string>
    <string name="was_on_time">Was On Time?</string>
    <string name="could_not_fetch_with_id">Could not fetch data with this id.</string>
    <string name="train_on_time">Train on time.</string>
    <string name="train_running_late_by">"Train running late by "</string>
    <string name="minutes_end_of_sentence">" minutes."</string>
    <string name="train_ahead_by">"Train ahead by "</string>
    <string name="train_not_running">Train not currently running.</string>
    <string name="tv_compositions_instructions">Enter train id and the date to search which wagons and services it has.</string>
    <string name="arrivals_and_departures">Arrivals and Departures</string>
    <string name="wagons_and_services_of">"Wagons and Services of "</string>
    <string name="could_not_get_on_time">Sorry, don\'t know :(</string>
    <string name="station_short_code">Enter station short code and press search to get arrivals and departures from this station.</string>
    <string name="insert_id">Please insert ID</string>
    <string name="insert_station_codes">Please insert departure and arrival station short codes.</string>
    <string name="insert_station_code">Please insert station short code.</string>
</resources>