<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tv_on_time_instructions"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_train_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_train_id"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_on_time_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleBtnOnTimeSearchClick"
            android:text="@string/btn_on_time_search" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/check_if_the_train_was_on_time_in_a_specific_date"
            android:textAlignment="center" />


        <Button
            android:id="@+id/btn_history_on_time_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleBtnHistoryOnTimeSearch"
            android:text="@string/was_on_time" />

        <TextView
            android:id="@+id/tv_on_time_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorTertiary"
            android:textSize="24sp" />

        <DatePicker
            android:id="@+id/dp_history_on_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />


    </LinearLayout>

</ScrollView>
