<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:weightSum="1">

            <TextView
                android:text="@string/search_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:padding="5dp"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:hint="@string/departure_station_shortcode"
                android:ems="10"
                android:id="@+id/et_search_departure_station" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:hint="@string/arrival_station_shortcode"
                android:ems="10"
                android:id="@+id/et_search_arrival_station" />

            <Button
                android:text="@string/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_search"
                android:onClick="handleBtnSearchClick"
                />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"
                android:elevation="1dp"
                android:layout_marginTop="5dp"
                />


        </LinearLayout>
    </ScrollView>



</LinearLayout>