<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tv_compositions_instructions"
            android:textSize="16sp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_compositions_trainid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_train_id"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/btn_compositions_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleBtnCompositionsSearchClick"
            android:text="@string/search" />

        <DatePicker
            android:id="@+id/dp_compositions_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</ScrollView>